# sensor_fusion

./: CMakeLists.txt  README.md  package.xml
calibration/: README.md  camera_downsample.cpp  camera_seg_circle.cpp  camera_seg_plane.cpp  clustering.cpp  detection_circle.cpp  dumy_lidar.cpp  evaluate.cpp  icp_transform.cpp  lidar_seg_circle.cpp  lidar_seg_plane.cpp  pointcloud2image.cpp  ransac_lidar.cpp  rm_ground_division.cpp  save_points.cpp  sphere_fitting.cpp  sq_rm_ground.cpp  sq_rm_ground_min_max.cpp
coloring/: README.md  coloring.cpp  coloring_new.cpp  coloring_zed0.cpp  coloring_zed1.cpp  coloring_zed2.cpp  coloringcloud.cpp
coloring/old/: coloringcloud.cpp
conf/: sq_lidar_conversions_new.yaml  zed0.yaml  zed0_coloring.yaml  zed0_depthimage.yaml
depthimage/: README.md  calc_movement.cpp  core.cpp  depthimage_creater.cpp  map_load.cpp  merge_cloud.cpp  min_max.cpp  normal_estimation_local.cpp  pcd_integrater.cpp  reference_viewer.cpp  save_points_flow.cpp  savecloud.cpp
depthimage/old/: calc_movement.cpp  core.cpp  lcl_for_depthimage.cpp  save_cloud.cpp  savecloud.cpp
include/complement/: localization.h
include/impl/: localization.hpp
include/sensor_fusion/: clustering.h  coloring.h  create_matrix.h  depthimage_creater.cpp  depthimage_creater.h  down_sampling.h  get_cluster_info.h  kd_tree.h  outlier_removal.h  plane_segmentation.h  pub_cloud.h  savePCDFile.h  save_data.cpp  save_data.h  sphere_fitting.h
launch/: calibration_camera.launch  calibration_camera_realworld.launch  calibration_lidar.launch  calibration_realworld.launch  coloring_zed0.launch  coloring_zed1.launch  coloring_zed2.launch  colouring_zed0.launch  colouring_zed1.launch  depthimage_zed0.launch  imu_complement.launch  integration.launch  laser_tf.launch  laser_transform_pointcloud.launch  lcl.launch  lcl_for_bag.launch  lidar_circle_detection.launch  republish.launch  run.launch  save_points.launch  sensor.launch  sq_lidar_convertor.launch  transform_pointcloud.launch
launch/calibration/: calibration_camera.launch  calibration_lidar.launch  circle_detection.launch  domsample_zed0.launch  downsample.launch  downsample_zed0.launch  downsample_zed1.launch  downsample_zed2.launch  evaluate.launch  icp_transform.launch
launch/coloring/: coloring_transform_pointcloud.launch  coloring_zed0.launch  coloring_zed1.launch  coloring_zed2.launch  division.launch
launch/depthimage/: core.launch  depthimage_creater.launch  map_publisher.launch  min_max.launch  movement.launch  normal_estimation_local.launch  opticalflow_test.launch  opticalflow_zed0.launch  opticalflow_zed1.launch  opticalflow_zed2.launch  pcd_integrater.launch  pcd_integrater_ground.launch  pcd_integrater_obstacle.launch  reference_viewer.launch  republish_depth.launch  savecloud.launch
launch/navigation/: navigation_savecloud.launch
launch/old/: colouring_zed2.launch
launch/paper/: depthimage_paper.launch  laser_transform_pointcloud_paper.launch  map_maker.launch  node_saver.launch  odom_to_baselink.launch  paper_depthimage.launch  paper_tf.launch  pub_saveflag.launch  save_cloud.launch  threshold.launch
launch/projection/: projection_zed0.launch  projection_zed1.launch  projection_zed2.launch
launch/savecloud/: opticalflow_zed0.launch  opticalflow_zed1.launch  opticalflow_zed2.launch  republish_optical_flow.launch  savecloud.launch  transform_listener.launch  transform_publisher.launch
launch/test/: diff_image_test.launch
launch/tf/: base2laser.launch  laser_tf.launch  sq2_realsense.launch  sq2_zed.launch  transform_broadcaster.launch  zed0_dumy_tf.launch  zed1_dumy_tf.launch  zed2_dumy_tf.launch  zed_dumy_tf.launch
launch/zed/: diff_image_zed0.launch  diff_image_zed1.launch  diff_image_zed2.launch  downsample_zed0.launch  downsample_zed1.launch  downsample_zed2.launch  zed0.launch  zed1.launch  zed2.launch
msg/: Cluster.msg  ClusterArray.msg  Data.msg  Node.msg  NodeInfo.msg
paper/: depth_image.cpp  depthimage_for_paper.cpp  node_saver.cpp  pcd_integrate.cpp  pcd_saver.cpp  pub_saveflag.cpp  threshold.cpp
projection/: projection.cpp
projection/old/: projection.cpp
rviz/: calibration.rviz
savecloud/: message_filters_test.cpp  save_data.cpp  transform_broadcast.cpp  transform_publisher.cpp
scripts/: optical_flow_zed0.py
scripts/bagfile/: README.md  calibration.sh  calibration_camera.sh  calibration_lidar.sh  coloring.sh  depthimage.sh  localization.sh
scripts/bagrec/: README.md  bag_rec.sh  bag_rec_auto_savecloud.sh  bag_rec_calibration.sh  bag_rec_coloring.sh  bag_rec_depthimage.sh  bag_rec_paper.sh  bag_rec_savecloud.sh  bag_rec_sensor.sh  downsample.sh  downsample_zed0.sh  downsample_zed2.sh  run.sh  run_audo_savecloud.sh  run_auto_savecloud.sh  run_calibration.sh  run_coloring.sh  run_depthimage.sh  run_paper.sh  run_savecloud.sh  run_sensor.sh  zed.sh
scripts/python/: image_diff.py  image_diff_test.py  optical_flow.py  optical_flow_old.py
scripts/realsense/: realsense0.sh  realsense1.sh  realsense2.sh  realsense3.sh  realsense4.sh
scripts/sq2/: README.md  auto_savecloud.sh  bag_rec.sh  calibration.sh  coloring.sh  coloring_zed0.sh  coloring_zed1.sh  coloring_zed2.sh  depthimage.sh  projection.sh  savecloud.sh  sensor_node.sh  zed0.sh  zed1.sh
scripts/zed/: diff_image_zed0.sh  diff_image_zed1.sh  diff_image_zed2.sh  downsample_zed1.sh  opticalflow_zed0.sh  opticalflow_zed1.sh  opticalflow_zed2.sh  zed2.sh
src/: camera_downsample.cpp  camera_transform_pointcloud.cpp  coloring.cpp  coloring_zed0.cpp  coloring_zed1.cpp  coloring_zed2.cpp  coloringcloud.cpp  colouring_realsense.cpp  colouring_zed0.cpp  colouring_zed1.cpp  colouring_zed2.cpp  depthimage.cpp  depthimage_zed0.cpp  depthimage_zed1.cpp  division.cpp  division_one_shot.cpp  imu_complement.cpp  integration.cpp  integration_filter.cpp  laser_transform_pointcloud.cpp  lcl.cpp  merge_cloud.cpp  save_cloud.cpp  save_points.cpp  save_points_odom.cpp  transform_pointcloud.cpp  transform_pointcloud_zed1.cpp  transform_pointcloud_zed2.cpp
src/calibration/: clustering.cpp  pointcloud2image.cpp  (+1 more)
test/: test_points_callback.cpp
(+10 files in other folders)
